<resources>
    <string name="app_name">My Application 2</string>
    <string name="name">Name</string>
    <string name="category_of_user">Category of User:</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="products">Products:</string>
    <string name="full_name">Full Name:</string>
    <string name="country">Country:</string>
    <string name="email">Email</string>
    <string name="last_seen">Last Seen:</string>
    <string name="social_network">Social Network:</string>
    <string name="save">Save</string>
    <string name="select_image">Select Image</string>
</resources>
