<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.macbookair.myapplication2.activities.AddContactActivity">


    <TextView
        android:id="@+id/fullname1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/product"
        android:layout_marginTop="20dp"
        android:text="@string/full_name"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/country1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fullname1"
        android:layout_marginTop="20dp"
        android:text="@string/country"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/email1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/country1"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/lastseen1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email1"
        android:layout_marginTop="20dp"
        android:text="@string/social_network"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/full_name_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/product"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:layout_toEndOf="@id/fullname1"
        android:background="@drawable/edit_text_add"
        android:gravity="center"
        android:inputType="textAutoComplete"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/country_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fullname1"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:layout_toEndOf="@id/country1"
        android:background="@drawable/edit_text_add"
        android:gravity="center"
        android:inputType="textAutoComplete"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/email_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/country1"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:layout_toEndOf="@id/email1"
        android:background="@drawable/edit_text_add"
        android:gravity="center"
        android:inputType="textAutoComplete"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/social_network_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email1"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:layout_toEndOf="@id/lastseen1"
        android:background="@drawable/edit_text_add"
        android:gravity="center"
        android:inputType="textAutoComplete"
        android:textSize="30sp" />

    <Button
        android:id="@+id/saveButton_addContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/button_save"
        android:text="@string/save" />

    <ImageView
        android:id="@+id/addContactImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignStart="@+id/saveButton_addContact"
        android:layout_below="@+id/saveButton_addContact"
        android:layout_marginTop="32dp"
        android:background="@drawable/unknown" />


</RelativeLayout>
